documents/topic_7312/page_0.txt
nomeata | 2021-09-16 17:07:08 UTC | #1

I get this error message when trying to build `replica` (well, `drun` to be precise, but should be the same):
```
   Compiling ic-replicated-state v0.8.0 (/build/rs/replicated_state)
error[E0432]: unresolved import `ic_registry_subnet_features`
 --> replicated_state/src/metadata_state.rs:6:5
  |
6 | use ic_registry_subnet_features::SubnetFeatures;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared crate or module `ic_registry_subnet_features`

error[E0283]: type annotations needed
   --> replicated_state/src/metadata_state.rs:304:79
    |
304 |             own_subnet_features: item.own_subnet_features.unwrap_or_default().into(),
    |                                  ---------------------------------------------^^^^--
    |                                  |                                            |
    |                                  |                                            cannot infer type for type parameter `U`
    |                                  this method call resolves to `T`
    |
    = note: cannot satisfy `_: From<SubnetFeatures>`
    = note: required because of the requirements on the impl of `Into<_>` for `SubnetFeatures`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0283, E0432.
For more information about an error, try `rustc --explain E0283`.
error: could not compile `ic-replicated-state`
```
Is the open source dumping missing the new(?) crate `ic_registry_subnet_features`? @basvandijk maybe?

-------------------------

nomeata | 2021-09-21 06:48:37 UTC | #2

May I bump this? It's not good when the published code is incomplete (and it hinders the Motoko team as well).

@claudio can you maybe ping Bas or who else is currently working on the open source code extraction script?

-------------------------

diegop | 2021-09-21 17:26:20 UTC | #3

Thanks for the ping. Claudio bumped this up internally.

-------------------------

claudio | 2021-09-21 19:43:39 UTC | #4

Apparently, the missing crate has been re-added and will be out with the next RC.

-------------------------

nomeata | 2021-10-16 21:15:11 UTC | #5

It seems that <https://github.com/dfinity/ic> still doesn’t have that fix, and also none of the other code changes since September 16. Did something slip through the cracks?

-------------------------

ayazgv | 2021-10-18 13:21:39 UTC | #6

Hello guys,

I'm still facing the same issue,
is there any fix?

-------------------------

diegop | 2021-10-21 04:39:28 UTC | #7

I will ping the team. Sorry for the delay, @ayazgv

-------------------------

sat | 2021-10-25 09:50:49 UTC | #8

We're really close to open-sourcing the entire IC repo, so this problem will be a history pretty soon.
In the meantime, I'll update the existing repo https://github.com/dfinity/ic with the latest version deployed to the NNS subnet, as soon as the new revision is pushed to it.

-------------------------

nomeata | 2021-11-09 18:04:57 UTC | #9

I see new commits in dfinity/ic! Whoohoo!
I wasn't able to check if they build now, yet, though.

-------------------------

